Introduce dedicated Bits type
Dedicated Bits type introduced to properly reflect yang's
'bits' type, replacing set of strings which is currently
used as bits value holder.

JIRA: YANGTOOLS-1426
Change-Id: I66864f0425978bca95658e930ee4fbf61eb01f3d
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>